fixing author spacing

--- a/_sass/author-info.scss
+++ b/_sass/author-info.scss
@@ -65,6 +65,11 @@
 .author-info-description:nth-of-type(n+2){
 	padding: 40px 0 0 0;
 }
+
+.author-info-description:first-of-type,
+.author-info-description:nth-of-type(1){
+	padding: 0 0 0 0;
+}
 	
 @media (max-width: 820px) {
     .author-info-image {
